--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="bar-header">
   <ul>
-    <li><a class="site-title" href="{{ site.url }}{{ site.baseurl }}" title="吕毅的博客">
-      <span style="font-weight:800">walterlv</span>
+    <li><a class="site-title" href="{{ site.url }}{{ site.baseurl }}" title="Jiayi Blog">
+      <span style="font-weight:800">jiayi</span>
     </a></li>
     {% for link in site.links-light %}
       <li><a class="navigation" href="{{ site.url }}{{ site.baseurl }}{{ link.url }}" title="{{ link.title }}">
