--- a/_includes/csdn.html
+++ b/_includes/csdn.html
@@ -1,5 +1,5 @@
 <p>
-    <a href="https://mvp.microsoft.com/en-us/PublicProfile/5003225" target="_blank" Title="Walter Lv ( 吕毅 )">
+    <a href="https://mvp.microsoft.com/en-us/PublicProfile/5003225" target="_blank" Title="Jiayi Li ( Jiayi )">
         <img class="avatar-logo" src="https://img-blog.csdnimg.cn/20190323130450817.png" alt="MVP">
     </a>
 </p>
