--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -7,5 +7,5 @@
 
   gtag('config', '{{ site.analytics.google }}');
 </script>
-<script async type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='{{ site.analytics.google }}'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1264408226%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278897451'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278897451%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 </div>
