--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@
         {{ content }}
       </article>
       <!-- {% include comments.html %} -->
-      {% include footer.html %}
+      <!-- {% include footer.html %} -->
     </section>
   </body>
 </html>
