--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
       else { document.cookie = 'theme=light'; }
     })()">
       <svg class="icon-menu mobile-only"><use xlink:href="#icon-theme"></use></svg>
-      <span class="desktop-only">主题</span>
+      <span class="desktop-only">THEME</span>
     </a></li>
     <script type="text/javascript">
       function getCookie(cname) {
@@ -46,7 +46,7 @@
 
   <a id="search" class="dosearch">
     <div class="search-box search-desktop-only">
-      <span>搜索</span>
+      <span>Search</span>
       <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </div>
     <svg class="icon-search search-mobile-only"><use xlink:href="#icon-search"></use></svg>
