--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,12 +12,12 @@
           <svg id="date" class="icon-calendar"><use xlink:href="#icon-calendar"></use></svg>
           {% if page.publishDate %}
             <time itemprop="datePublished" datetime="{{ page.publishDate | date_to_xmlschema }}" class="date">
-              发布于 {% include date.html date=page.publishDate %}
+              Post on {% include date.html date=page.publishDate %}
             </time>
             <br class="mobile-only">
             <svg id="clock" class="icon-clock"><use xlink:href="#icon-clock"></use></svg>
             <time itemprop="datePublished" datetime="{{ page.publishDate | date_to_xmlschema }}" class="date">
-              更新于 {% include date.html date=page.date %}
+              Updated on {% include date.html date=page.date %}
             </time>
           {% elsif page.date %}
             <time itemprop="dateUpdated" datetime="{{ page.date | date_to_xmlschema }}" class="date">
