--- a/_includes/license.html
+++ b/_includes/license.html
@@ -1,22 +1,24 @@
 <p>
-    本文会经常更新，请阅读原文：
+    This article might be updated in the future, please refer to the original site: 
     <a href="{{ site.baseurl }}{{ page.url }}">{{ site.url }}{{ site.baseurl }}{{ page.url }}</a>
-    ，以避免陈旧错误知识的误导，同时有更好的阅读体验。
+    , to avoid misleading of false or old information, and to have a better reading experience.
 </p>
 <p>
-    如果你想持续阅读我的最新博客，请点击 <a href="{{ site.baseurl }}/feed.xml">RSS 订阅</a>，或者<a href="https://walterlv.blog.csdn.net/">前往 CSDN 关注我的主页</a>。
+    If you would like to follow my newest blog, please click <a href="{{ site.baseurl }}/feed.xml">RSS Subscribe</a>。
 </p>
 <p>
     <a rel="知识共享许可协议" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
         <img alt="知识共享许可协议" src="{{ site.url }}{{ site.baseurl }}{{ site.license.img }}" />
     </a>
-    本作品采用
-    <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议</a>
-    进行许可。欢迎转载、使用、重新发布，但务必保留文章署名
+    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+        Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>
+    It is widely welcomed to reprint, use, repost, but make sure you have referred
     {% if page.post_author %}{{ page.post_author }}{% else %}{{ page.author }}{% endif %}
-    （包含链接：
+    (And include the url：
     <a href="{{ site.url }}">{{ site.url }}</a>
-    ），不得用于商业目的，基于本文修改后的作品务必以相同的许可发布。如有任何疑问，请
-    <a href="mailto:{{ site.mail }}">与我联系 ({{ site.mail }})</a>
+    ）. You may not use the material for commercial purposes. If you remix, transform, or build upon the material, 
+    you must distribute your contributions under the same license as the original.
+    If there is any problems, please contact me 
+    <a href="mailto:{{ site.mail }}">for further information ({{ site.mail }})</a>
     。
 </p>
