fix language mistakes

--- a/_includes/license.html
+++ b/_includes/license.html
@@ -4,7 +4,7 @@
 <p>
     This article might be updated in the future, please refer to the original site: 
     <a href="{{ site.baseurl }}{{ page.url }}">{{ site.url }}{{ site.baseurl }}{{ page.url }}</a>
-    , to avoid misleading by false or old information, and to have a better reading experience.
+    , to avoid misleading by false or out-dated information, and to have a better reading experience.
 </p>
 <p>
     If you would like to follow my newest blog, please click <a href="{{ site.baseurl }}/feed.xml">RSS Subscribe</a>。
