--- a/_includes/license.html
+++ b/_includes/license.html
@@ -7,21 +7,27 @@
     , to avoid misleading by false or out-dated information, and to have a better reading experience.
 </p>
 <p>
-    If you would like to follow my newest blog, please click <a href="{{ site.baseurl }}/feed.xml">RSS Subscribe</a>。
+    If you would like to follow my latest blog, please click <a href="{{ site.baseurl }}/feed.xml">RSS Subscribe</a>。
 </p>
 <p>
     <a rel="知识共享许可协议" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
         <img alt="知识共享许可协议" src="{{ site.url }}{{ site.baseurl }}{{ site.license.img }}" />
     </a>
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-        Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>
-    It is widely welcomed to reprint, use, repost, but make sure you have referred
+        Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+</p>
+<p>
+    It is widely welcomed to copy and redistribute the material in any medium or format as well as 
+    remix, transform, and build upon the material, but make sure you have referred
     {% if page.post_author %}{{ page.post_author }}{% else %}{{ page.author }}{% endif %}
     (And include the url：
     <a href="{{ site.url }}">{{ site.url }}</a>
-    ）. You may not use the material for commercial purposes. If you remix, transform, or build upon the material, 
+    ）.
+</p>
+<p>
+    However, You may not use the material for commercial purposes. If you remix, transform, or build upon the material, 
     you must distribute your contributions under the same license as the original.
-    If there is any problems, please contact me 
+    If there is any problem, please contact me 
     <a href="mailto:{{ site.mail }}">for further information ({{ site.mail }})</a>
     。
 </p>
