--- a/_includes/license.html
+++ b/_includes/license.html
@@ -10,6 +10,9 @@
     If you would like to follow my latest blog, please click <a href="{{ site.baseurl }}/feed.xml">RSS Subscribe</a>。
 </p>
 <p>
+    ___________________________________________________________________
+</p>
+<p>
     <a rel="知识共享许可协议" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
         <img alt="知识共享许可协议" src="{{ site.url }}{{ site.baseurl }}{{ site.license.img }}" />
     </a>
@@ -27,7 +30,8 @@
 <p>
     However, You may not use the material for commercial purposes. If you remix, transform, or build upon the material, 
     you must distribute your contributions under the same license as the original.
-    If there is any problem, please contact me 
-    <a href="mailto:{{ site.mail }}">for further information ({{ site.mail }})</a>
-    。
+</p>
+<p>
+    If there is any problem, please contact me for further information.
+    <a href="mailto:{{ site.mail }}"> ({{ site.mail }})</a>
 </p>
