--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -36,7 +36,7 @@
       {% for link in site.links %}
         <li><a href="{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a></li>
       {% endfor %}
-      <li><a class="feed" href="{{ site.url }}{{ site.baseurl }}/feed.xml" title="Atom/RSS feed">RSS 订阅</a></li>
+      <li><a class="feed" href="{{ site.url }}{{ site.baseurl }}/feed.xml" title="Atom/RSS feed">RSS Subscribe</a></li>
     </ul>
   </nav>
 </aside>
