--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,11 +1,11 @@
 <section class="comments">
   <script src="https://utteranc.es/client.js"
-          repo="walterlv/BlogComments"
+          repo="SHIELDJY/SHIELDJY.github.io"
           issue-term="pathname"
           theme="github-light"
           crossorigin="anonymous"
-          async>
-  </script>
+  async>
+</script>
   <div class="disqus-comments">
     <!-- Disqus Comment -->
     <div id="disqus_thread"></div>
