--- a/_layouts/xinran.html
+++ b/_layouts/xinran.html
@@ -2,9 +2,9 @@
 <html lang="en" itemscope itemtype="http://schema.org/BlogPosting">
   {% include head.html %}
   <body class="has-push-menu {{ site.default-theme }}-theme">
-    {% include script.html %}
+    <!-- {% include script.html %}
     {% include svg-icons.html %}
-    {% include header.html %}
+    {% include header.html %} -->
     <section class="post">
       <article role="article" id="post" class="post-content" itemprop="articleBody">
         <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
