--- a/_layouts/xinran.html
+++ b/_layouts/xinran.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/BlogPosting">
-  {% include head.html %}
+  <!-- {% include head.html %} -->
   <body class="has-push-menu {{ site.default-theme }}-theme">
     <!-- {% include script.html %}
     {% include svg-icons.html %}
