--- a/_layouts/xinran.html
+++ b/_layouts/xinran.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="http://schema.org/BlogPosting">
-  <!-- {% include head.html %} -->
+  <!-- {% include head.html %}
   <body class="has-push-menu {{ site.default-theme }}-theme">
-    <!-- {% include script.html %}
+    {% include script.html %}
     {% include svg-icons.html %}
-    {% include header.html %} -->
+    {% include header.html %}
     <section class="post">
       <article role="article" id="post" class="post-content" itemprop="articleBody">
         <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
@@ -33,5 +33,29 @@
       </article>
       {% include clickable-image.html %}
     </section>
-  </body>
+  </body> -->
+  <section class="post">
+    <article role="article" id="post" class="post-content" itemprop="articleBody">
+      <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
+      <p itemprop="post-info" class="post-info">
+        <svg id="date" class="icon-calendar"><use xlink:href="#icon-calendar"></use></svg>
+        {% if page.publishDate %}
+          <time itemprop="datePublished" datetime="{{ page.publishDate | date_to_xmlschema }}" class="date">
+            Post on {% include date.html date=page.publishDate %}
+          </time>
+          <br class="mobile-only">
+          <svg id="clock" class="icon-clock"><use xlink:href="#icon-clock"></use></svg>
+          <time itemprop="datePublished" datetime="{{ page.publishDate | date_to_xmlschema }}" class="date">
+            Updated on {% include date.html date=page.date %}
+          </time>
+        {% elsif page.date %}
+          <time itemprop="dateUpdated" datetime="{{ page.date | date_to_xmlschema }}" class="date">
+            {% include date.html date=page.date %}
+          </time>
+        {% endif %}
+      </p>
+      <p itemprop="description" class="subtitle">{{ page.description }}</p>
+      {{ content }}
+    </article>
+  </section>
 </html>
