--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer>
     {% include analytics.html %}
+    <div style="font-size: 80%">
     <p>© 2020 <span class="bold">shieldjy</span>, all rights reserved.
     Powered by: <span class="bold"><a href="http://jekyllcn.com/">Jekyll</a></span>
     Theme by:
@@ -7,6 +8,7 @@
         <span class="bold"><a href="https://walterlv.github.io" target="_blank" class="creator">walterlv</a></span>
         <span class="tooltip-text desktop-only">Based on <a href="http://www.rossener.com" target="_blank" class="creator">Thiago Rossener</a></span>
     </span></p>
+    </div>
 </footer>
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
 {% include stats.html %}
