--- a/_includes/author.html
+++ b/_includes/author.html
@@ -27,6 +27,11 @@
         <svg><use xlink:href="#icon-stack-overflow"></use></svg>
       </a>
       {% endif %}
+      {% if orcid.id %}
+      <a itemprop="orcid" href="https://orcid.org/{{ orcid.id }}" title="ORCiD">
+        <svg><use xlink:href="#icon-stack-overflow"></use></svg>
+      </a>
+      {% endif %}
     </p>
   </div>
 </section>
