--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -31,6 +31,11 @@
         <svg><use xlink:href="#icon-stack-overflow"></use></svg>
       </a>
       {% endif %}
+      {% if orcid.id %}
+      <a itemprop="orcid" href="https://orcid.org/{{ orcid.id }}" title="ORCiD">
+        <svg><use xlink:href="#icon-stack-overflow"></use></svg>
+      </a>
+      {% endif %}
     </p>
     <ul>
       {% for link in site.links %}
