--- a/_includes/author.html
+++ b/_includes/author.html
@@ -27,7 +27,7 @@
         <svg><use xlink:href="#icon-stack-overflow"></use></svg>
       </a>
       {% endif %}
-      {% if orcid.id %}
+      {% if site.orcid.id %}
       <a itemprop="orcid" href="https://orcid.org/{{ orcid.id }}" title="ORCiD">
         <svg><use xlink:href="#icon-stack-overflow"></use></svg>
       </a>
