--- a/_includes/author.html
+++ b/_includes/author.html
@@ -28,7 +28,7 @@
       </a>
       {% endif %}
       {% if site.orcid.id %}
-      <a itemprop="orcid" href="https://orcid.org/{{ orcid.id }}" title="ORCiD">
+      <a itemprop="orcid" href="https://orcid.org/{{ site.orcid.id }}" title="ORCiD">
         <svg><use xlink:href="#icon-stack-overflow"></use></svg>
       </a>
       {% endif %}
