update orcid icon

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -33,7 +33,7 @@
       {% endif %}
       {% if site.orcid.id %}
       <a itemprop="orcid" href="https://orcid.org/{{ orcid.id }}" title="ORCiD">
-        <svg><use xlink:href="#icon-stack-overflow"></use></svg>
+        <svg><use xlink:href="#icon-orcid"></use></svg>
       </a>
       {% endif %}
     </p>
